src/objects/Competitor2Opportunity__c.object
<CustomObject>
    <description>Junction object between Opportunity and Competitor Object allowing multiple competitors to be associated with an opportnity</description>
    <fields>
        <fullName>Additional_Details__c</fullName>
        <description>Are there any additional details regarding this competitor on this deal? If so please add here. 

This field is reviewed regularly by our competitive analysis team.  The Competitive Analysis report (scheduled weekly to the team) includes this field for review. 

To be used for discovery of new features, functionality, weaknesses, and advantages of competitors.</description>
        <inlineHelpText>Are there any additional details regarding this competitor on this deal? If so please add here. 

This field is reviewed regularly by our competitive analysis team.  For general competitor details please submit a competitor update request.</inlineHelpText>
        <label>Additional Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_Disqualified__c</fullName>
        <description>Select if you know the Competitor was disqualified</description>
        <inlineHelpText>Select if you know the Competitor was disqualified</inlineHelpText>
        <label>Competitor Disqualified</label>
        <picklist>
            <picklistValues>
                <fullName>In Running</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Running</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor Won</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitor_Weaknesses__c</fullName>
        <description>Weaknesses the competitor has against us in the deal</description>
        <inlineHelpText>Weaknesses the competitor has against us in the deal</inlineHelpText>
        <label>Competitor Weaknesses</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <description>The competitor associated with the Opportunity.  Gives access competitor details from the Opportunity, via the related list.  Master Detail Relationship.  Only Existing competitors can be added, there is an other option, however it has no associated data, and is used when the submit new competitor option is selected. No lookup filters;</description>
        <inlineHelpText>The competitor associated with the Opportunity.  This lets you have access to the competitor details from the Opportunity</inlineHelpText>
        <label>Competitor</label>
        <referenceTo>Competitor__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Competitors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select if the competitor is no longer in the running</description>
        <inlineHelpText>Select if the competitor is no longer in the running</inlineHelpText>
        <label>Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lost_Details__c</fullName>
        <description>What gave the competitor the upper hand with this deal?  

The details you include will be used by the marketing team to find solutions to enable your team, be through, clear, don&apos;t hesitate to add background</description>
        <inlineHelpText>What gave the competitor the upper hand with this deal?  

The details you include will be used by the marketing team to find solutions to enable your team, be through, clear, don&apos;t hesitate to add background</inlineHelpText>
        <label>Lost Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <description>The status of the Opportunity, set via a process when the pop stage is updated</description>
        <inlineHelpText>The status of the Opportunity</inlineHelpText>
        <label>Opportunity Stage</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>The opportunity that has the competitor being associated with it.  Master-detail relationship.</description>
        <inlineHelpText>The opportunity you are selecting the competitor for</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Competitors</relationshipLabel>
        <relationshipName>Competitors</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Our_Advantages__c</fullName>
        <description>Details regarding the advantage we have on this deal over this specific competitor. No default value, to be displayed on the competitor object</description>
        <inlineHelpText>Details regarding the advantage we have on this deal over this specific competitor.</inlineHelpText>
        <label>Our Advantages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Our_Weaknesses__c</fullName>
        <description>What weaknesses do we have specifically in this deal?  What do we need to improve on to have the competitive edge?</description>
        <inlineHelpText>What weaknesses do we have specifically in this deal? 
What advantages does the competition have over us?</inlineHelpText>
        <label>Our Weaknesses</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PowerOfOne__c</fullName>
        <description>Power of One field, used in reporting, rollups, and formulas.  Count of this field along with the Opportunity Status used to determine win/loss ratios against the count of all junction objects for a competitor with rollup</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One field, used in reporting, rollups, and formulas</inlineHelpText>
        <label>Power of One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Won__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the Opportunity is Lost &amp; this competitor won the deal, select this checkbox so that we can determine how often the competitor wins</description>
        <inlineHelpText>If the Opportunity is Lost &amp; this competitor won the deal, select this checkbox so that we can determine how often the competitor wins</inlineHelpText>
        <label>Won</label>
        <type>Checkbox</type>
    </fields>
    <label>Opportunity Competitor</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>OppCompetitor</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Competitor</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Opp_Must_be_Lost_for_Competitor_Won</fullName>
        <active>true</active>
        <description>If the Status of the Competitor is Won, then the Opportunity Stage must be closed lost.  Error appears at the top of the page</description>
        <errorConditionFormula>AND(
Won__c = True,
NOT(ISPICKVAL(Opportunity__r.StageName, &quot;Closed Lost&quot;)))</errorConditionFormula>
        <errorMessage>Only Lost Opportunities can have a Competitor that won</errorMessage>
    </validationRules>
</CustomObject>